# Vermeil-Launcher

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  LICENSES.md  PRIVACY.md  README.md  install.sh
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: mod-release.yml  release.yml
.kiro/skills/add-mod-loader/: SKILL.md
.kiro/skills/add-screen/: SKILL.md
.kiro/skills/add-tauri-command/: SKILL.md
.kiro/skills/content-source-parity/: SKILL.md
.kiro/skills/dependencies/: SKILL.md
.kiro/skills/minecraft-mod/: SKILL.md
.kiro/skills/refactoring/: SKILL.md
.kiro/skills/release-process/: SKILL.md
.kiro/steering/: coding-standards.md  content-source-parity.md  implementation-process.md  ponytail.md
Vermeil/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
Vermeil/src/: App.tsx  index.tsx
Vermeil/src-tauri/: Cargo.toml  tauri.conf.json
Vermeil/src-tauri/capabilities/: default.json  logs.json
Vermeil/src-tauri/icons/: icon.icns
Vermeil/src-tauri/nsis/: hooks.nsi
Vermeil/src-tauri/src/: error.rs  lib.rs  main.rs
Vermeil/src-tauri/src/commands/: app_updater.rs  auth.rs  cf_import.rs  files.rs  instances.rs  java.rs  launch.rs  meta.rs  mod.rs  mods.rs  settings.rs  skins.rs
Vermeil/src-tauri/src/models/: instance.rs  settings.rs
Vermeil/src-tauri/src/services/: app_updater.rs  auth.rs  cf_import.rs  cf_mod_install.rs  companion_mod.rs  companion_settings.rs  curseforge.rs  discord.rs  download.rs  fabric.rs  icon_cache.rs  instance_cape.rs  instance_service.rs  java.rs  launch.rs  loader_scan.rs  lwjgl_compat.rs  memory.rs  meta.rs  mod.rs  mod_install.rs  mod_updates.rs  modpack.rs  modrinth.rs  neoforge.rs  prepare.rs  quilt.rs  settings_service.rs  skins.rs  video_options.rs  window_state.rs
Vermeil/src-tauri/src/util/: credentials.rs  http.rs  mod.rs  paths.rs  platform.rs
Vermeil/src/components/: BulkInstallToast.tsx  CapeChipThumb.tsx  CrashReportModal.tsx  DependencyIssuesModal.tsx  Dropdown.tsx  FloatingDock.tsx  Icons.tsx  InstallProgress.tsx  JavaPathInput.tsx  KeybindCapture.tsx  NoAccountModal.tsx  PageSlider.tsx  PlayerHead.tsx  ResizeHandles.tsx  Sidebar.tsx  SkinAvatar.tsx  Splash.tsx  Titlebar.tsx  Toasts.tsx  UpdateBanner.tsx
Vermeil/src/ipc/: commands.ts
Vermeil/src/lib/: cape.ts  capeThumb.ts  contentVersion.selfcheck.ts  contentVersion.ts  gridPageSize.ts  keybinds.ts  loader.ts
Vermeil/src/modals/: BrowseModpacks.tsx  CreateChoose.tsx  CreateCustom.tsx  CustomCapeEditor.tsx  ImportCurseForge.tsx  InGameCapeModal.tsx  JavaChooserModal.tsx  OnboardingWizard.tsx  PinInstancesModal.tsx
Vermeil/src/screens/: Account.tsx  Downloads.tsx  Home.tsx  InstanceMods.tsx  Library.tsx  LogsPopout.tsx  Settings.tsx  Skins.tsx
Vermeil/src/services/: updater.ts
Vermeil/src/styles/: base.css  components.css  dock.css  global.css  layout.css  logs.css  modals.css  notifications.css  screens.css  splash.css
Vermeil/src/types/: gifuct-js.d.ts
companion-mod/archive/fabric/: README.md
companion-mod/fabric/1.21-1.21.1/: gradle.properties
companion-mod/fabric/1.21.11/: LICENSE  gradle.properties  settings.gradle
companion-mod/fabric/1.21.2/: build.gradle  gradle.properties
companion-mod/fabric/1.21.2-1.21.4/: gradle.properties  settings.gradle
companion-mod/fabric/1.21.5/: gradle.properties
companion-mod/fabric/1.21.5-1.21.8/: settings.gradle
companion-mod/fabric/1.21.9-1.21.10/: build.gradle  gradle.properties
docs/: DEVELOPMENT.md  PROJECT_SUMMARY.md  ROADMAP.md  UI.md
docs/research/: README.md
scripts/: test-cape.ps1
vermeil-fabric-1.21/: build.gradle  gradle.properties  settings.gradle
vermeil-fabric-26/: build.gradle  gradle.properties
vermeil-mod/: README.md  build.gradle  gradle.properties  settings.gradle  stonecutter.gradle.kts
(+92 files in other folders)
