[package]
name = "vermeil"
version = "0.1.0"
description = "A lightweight Minecraft launcher"
authors = ["davekb1976-beep"]
edition = "2021"

[lib]
name = "vermeil_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
url = "2"
urlencoding = "2"
open = "5"
zip = "2"
discord-presence = "1"
lazy_static = "1"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
sysinfo = { version = "0.37", default-features = false, features = ["system"] }
ammonia = "4"
flate2 = "1"
tar = "0.4"

[target.'cfg(windows)'.dependencies]
# Used by services::java to enumerate JRE installs from the Windows Registry.
# Bundled on Windows targets only.
winreg = "0.55"
# DPAPI wrapper for encrypting sensitive credentials (access_token, refresh_token)
# at rest in accounts.json. Tied to the current Windows user session.
windows-dpapi = "0.2"
